--- a/course-02/exercises/udacity-c2-frontend/src/app/home/home.page.html
+++ b/course-02/exercises/udacity-c2-frontend/src/app/home/home.page.html
@@ -1,4 +1,5 @@
 <ion-content>
-    <app-feed-upload-button></app-feed-upload-button>
-    <app-feed-list></app-feed-list>
+  <app-feed-upload-button></app-feed-upload-button>
+  <app-feed-list></app-feed-list>
+  home page
 </ion-content>
